AIX build breaks after 8212611

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • gc
    • b17

      AIX build broken after 8212611.

      "/net/usr.work/openjdk/nb/rs6000_64/nightly/jdk/src/hotspot/share/opto/cfgnode.cpp", line 1452.22: 1540-0129 (S) The qualifier "BarrierSet" is not defined in the current scope.

      (As for why did not non-pch build not find this: barrierSet.hpp is included to cfgnode.cpp as a side effect of jfr:

      471 ........ /shared/projects/openjdk/jdk-jdk/output-fastdebug-nopch/hotspot/variant-server/gensrc/jfrfiles/jfrEventClasses.hpp
      472 ......... /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/jfr/recorder/service/jfrEvent.hpp
      477 .......... /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/jfr/writers/jfrNativeEventWriter.hpp
      482 ........... /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/jfr/writers/jfrEventWriterHost.inline.hpp
      483 ............ /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/jfr/writers/jfrEventWriterHost.hpp
      484 ............. /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/jfr/writers/jfrWriterHost.inline.hpp
      505 .............. /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/oops/typeArrayOop.inline.hpp
      506 ............... /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/oops/access.inline.hpp
      507 ................ /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp
      508 ................. /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/gc/shared/modRefBarrierSet.inline.hpp
      509 .................. /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/gc/shared/barrierSet.hpp

      Since we do not include JFR on AIX, we miss these includes

            Assignee:
            Thomas Stuefe
            Reporter:
            Thomas Stuefe
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: