8212896: AIX build breaks after 8212611

Reviewed-by: simonis, dholmes